Add login with JWT

--- a/picapi/package.json
+++ b/picapi/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pic-api",
   "description": "A simple Node.js based app which connects to some db and acts as an api.",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js"
@@ -9,6 +9,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
