Updating .Env Example and Safety checks

--- a/picapi/.env.exemple
+++ b/picapi/.env.exemple
@@ -11,5 +11,8 @@ DB_PASS=
 DB_NAME=
 DB_PORT=
 
-#Password Generator Options
+#jwt Token Key (Random Generated String)
+TOKEN_KEY=
+
+#Password Generator Options bCrypt (Needs to be a Number)
 SALT_ROUNDS=
